<resources>
    <string name="app_name" translatable="false">ParkRight</string>
    <string name="facebook_application_id" translatable="false">382526675967039</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb382526675967039</string>
    <string name="title_1" translatable="false"> Sick of Bad Parking?</string>
    <string name="title_2" translatable="false"> Want to Make an Impact?</string>
    <string name="title_3" translatable="false"> Need Extra Money?</string>
    <string name="subtitle_1" translatable="false"> Let your frustration out by reporting parking violations to relevant authorities in 4 simple steps.</string>
    <string name="subtitle_2" translatable="false"> Help your community solving parking issues and making your city more accessible. </string>
    <string name="subtitle_3" translatable="false">Become one of our reporters and get rewarded for your efforts and impact. </string>
    <string name="home_button" translatable="false">Report Violation</string>
    <string name="home_menu_desc" translatable="false">Hamburger Menu vector icon</string>
    <string name="home_share_desc" translatable="false">Share vector icon</string>
    <string name="home_image_desc" translatable="false">Home image</string>
    <string name="nav_home" translatable="false">Home</string>
    <string name="nav_new" translatable="false">New Violation</string>
    <string name="nav_logout" translatable="false">Logout</string>
    <string name="nav_account" translatable="false">My Account</string>
    <string name="nav_reports" translatable="false">My Reports</string>
    <string name="nav_status" translatable="false">My Status</string>
    <string name="nav_share" translatable="false">Share with Friends</string>
    <string name="nav_contact" translatable="false">Contact Us</string>
    <string name="nav_rate" translatable="false">Rate Us</string>
    <string name="nav_terms" translatable="false">Terms and Conditions</string>
    <string name="nav_privacy" translatable="false">Privacy Policy</string>
    <string name="step_1" translatable="false"> Violation Type</string>
    <string name="one" translatable="false"> 1 </string>
    <string name="two" translatable="false"> 2 </string>
    <string name="three" translatable="false"> 3 </string>
    <string name="four" translatable="false"> 4 </string>
    <string name="five" translatable="false"> 5 </string>
    <string name="type" translatable="false"> Type </string>
    <string name="photos" translatable="false"> Photos </string>
    <string name="location" translatable="false"> Location </string>
    <string name="type_label" translatable="false"> VIOLATION TYPE </string>
    <string name="violation_type_Phrase_1" translatable="false"> Select Parking Violation Type  </string>
    <string-array name="violation_types">
        <item>Parking in front of Fire Hydrant!</item>
        <item>Parking in Disabled Spot!</item>
        <item>Parking behind vehicles!</item>
        <item>Parking over Two Spaces!</item>
        <item>Parking against Traffic Direction!</item>
        <item>Parking on a Sidewalk!</item>
        <item>Parking in a Bus Stop!</item>
    </string-array>
    <string name="card_image_desc" translatable="false"> Parking Violation image </string>
    <string name="down_arrow_desc" translatable="false"> Down Arrow </string>
    <string name="activity_photo_phrase_1" translatable="false"> Snap 3 photos of the violating car </string>
    <string name="activity_photo_phrase_2" translatable="false"> How Should I take photos ? </string>
    <string name="show_button" translatable="false"> Show Tips </string>
    <string name="front" translatable="false"> Front </string>
    <string name="windshield" translatable="false"> windshield </string>
    <string name="rear" translatable="false"> Rear </string>
    <string name="licence" translatable="false"> Licence Plate </string>
    <string name="evidence" translatable="false"> Evidence </string>
    <string name="camera_button_desc" translatable="false"> Click on this button to take photo of violating car </string>
    <string name="plate_check_box" translatable="false"> I clearly snapped Licence Plate </string>
    <string name="context_check_box" translatable="false"> I clearly snapped Car in Violation Context</string>
    <string name="photo_continue_button" translatable="false"> Continue </string>
    <string name="photos_warning" translatable="false"> All Photos must be taken</string>
    <string name="checkboxes_warning" translatable="false"> All Boxes must be checked</string>
    <string name="close" translatable="false"> X </string>
    <string name="tip_1" translatable="false"> Tip 1 </string>
    <string name="tip_2" translatable="false"> Tip 2 </string>
    <string name="tip_3" translatable="false"> Tip 3 </string>
    <string name="tip_1_text" translatable="false"> Lorem ipsum dolor sit amet. </string>
    <string name="tip_2_text" translatable="false"> Consectetur adipiscing elit. </string>
    <string name="tip_3_text" translatable="false"> Sed do eiusmod tempor.  </string>
    <string name="location_img_desc" translatable="false"> geolocation icon </string>
    <string name="confirm_button" translatable="false"> Confirm </string>
    <string name="confirm_text" translatable="false"> Confirm Car Location </string>
    <string name="step_3" translatable="false"> Map </string>
    <string name="activity_map_phrase_1" translatable="false"> Tap Map to identify Location </string>
    <string name="map_continue_button" translatable="false"> Almost There! Continue </string>
    <string name="action_geolocate" translatable="false">Pick Place</string>
    <string name="default_info_title" translatable="false">Default Location</string>
    <string name="default_info_snippet" translatable="false">No places found, because location permission is disabled.</string>
    <string name="loading" translatable="false">Loading…</string>
    <string name="login" translatable="false"> Login </string>
    <string name="login_welcome" translatable="false"> Welcome Back </string>
    <string name="email_address" translatable="false"> EMAIL ADDRESS </string>
    <string name="email_password" translatable="false"> PASSWORD </string>
    <string name="forgot_password" translatable="false"> Forgot your password? </string>
    <string name="ic_arrow_desc" translatable="false"> Arrow icon for forgot password </string>
    <string name="not_member" translatable="false"> Not a member yet?</string>
    <string name="social_media" translatable="false"> or sign in with social media</string>
    <string name="ic_google_desc" translatable="false"> Google icon </string>
    <string name="ic_facebook_desc" translatable="false"> Facebook icon </string>
    <string name="step_4" translatable="false"> Login </string>
    <string name="client_id" translatable="false">843254302439-ireeq2d7ecnbrfisbn79o8v2qp6dei5b.apps.googleusercontent.com</string>
    <string name="email" translatable="false"> Email </string>
    <string name="password" translatable="false"> Password </string>
    <string name="title_activity_login2" translatable="false">Sign in</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="dialog_title" translatable="false">Reset Password </string>
    <string name="send" translatable="false">Send </string>
    <string name="cancel" translatable="false">Cancel </string>
    <string name="password_sent" translatable="false">Password sent to your email </string>
    <string name="sign_up" translatable="false"> Sign Up</string>
    <string name="welcome" translatable="false">"Welcome"</string>
    <string name="first_name" translatable="false"> FIRST NAME </string>
    <string name="last_name" translatable="false"> LAST NAME </string>
    <string name="terms_conditions" translatable="false"> I agree to Terms and Conditions </string>
    <string name="already_member" translatable="false"> Already a member? </string>
    <string name="step_4_1" translatable="false"> Sign Up</string>
    <string name="register_success" translatable="false">  Registration Succeeded </string>
    <string name="register_failure" translatable="false">  Registration Failed </string>
    <string name="verif_phrase_1" translatable="false">An Email has been sent to your address:  </string>
    <string name="verif_phrase_2" translatable="false">Click on the provided link to verify your email address</string>
    <string name="report" translatable="false"> Report </string>
    <string name="spinner_title" translatable="false"> Violation Type </string>
    <string name="send_button" translatable="false"> Send Report </string>
    <string name="title_activity_drawer" translatable="false">DrawerActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="log_out" translatable="false">Log out</string>
    <string name="checkbox_warning" translatable="false">Please check \'I agree to Terms and conditions\'</string>
    <string name="thank_you" translatable="false"> Thank You,  </string>
    <string name="thank_message_p1" translatable="false"> We Really appreciate your help in fighting illegal parking.
        You are making Frankfurt\'s car parks a friendly environment.
    </string>
    <string name="thank_message_p2" translatable="false">
    Your report will be carefully processed within 24 h.
    An email will be sent to your adress to inform you about your report\'s status.
    </string>
    <string name="new_violation" translatable="false"> New Violation </string>
    <string name="my_reports" translatable="false"> My Reports </string>
    <string name="reports_name" translatable="false"> My Reports </string>
    <string name="empty" translatable="false"> You don\'t have any reports yet ! </string>
    <string name="pending" translatable="false"> Pending </string>
    <string name="approved" translatable="false"> Approved </string>
    <string name="declined" translatable="false"> Declined </string>
    <string name="date" translatable="false"> Date</string>
    <string name="time" translatable="false"> Time</string>
    <string name="ic_status_desc" translatable="false"> Icon illustrating report status</string>
    <string name="level_initial" translatable="false"> L1</string>
    <string name="level_name" translatable="false"> Beginner </string>
    <string name="total_reports_nb" translatable="false"> 10 </string>
    <string name="total" translatable="false"> Total </string>
    <string name="reports" translatable="false"> Reports </string>
    <string name="approved_reports_nb" translatable="false"> 3 </string>
    <string name="declined_reports_nb" translatable="false"> 3 </string>
    <string name="pending_reports_nb" translatable="false"> 4 </string>
    <string name="total_app_reports" translatable="false"> 12 Approved Reports </string>
    <string name="month_year" translatable="false"> February 2020 </string>
</resources>